--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,10 @@
 	</includes>
 	</configuration>
 </plugin>
+<plugin>
+	<artifactId>maven-resources-plugin</artifactId>
+	<version>3.0.2</version>
+</plugin>
 		</plugins>
 	</build>
 	
