--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,36 @@
-version: "3.8"
+version: "3.3"
 
 services:
   mysqldb:
+    container_name: mysqldb
     image: mysql:5.7
     restart: unless-stopped
-    env_file: ./.env
     environment:
-      - MYSQL_ROOT_PASSWORD=$MYSQLDB_ROOT_PASSWORD
-      - MYSQL_DATABASE=$MYSQLDB_DATABASE
+      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_DATABASE=tpachato
     ports:
-      - $MYSQLDB_LOCAL_PORT:$MYSQLDB_DOCKER_PORT
+      - 3306:3306
     volumes:
-      - db:/var/lib/mysql
+      - /home/mysql/data
   app:
     depends_on:
       - mysqldb
-    build: ./spring-app
+    build:
+      context: "./"
+      dockerfile: "Dockerfile"
     restart: on-failure
-    env_file: ./.env
     ports:
-      - $SPRING_LOCAL_PORT:$SPRING_DOCKER_PORT
+      - 8089:8089
     environment:
       SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:mysql://mysqldb:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE?useSSL=false",
-        "spring.datasource.username" : "$MYSQLDB_USER",
-        "spring.datasource.password" : "$MYSQLDB_ROOT_PASSWORD",
+        "spring.datasource.url"  : "jdbc:mysql://mysqldb:3306/tpachato?useSSL=false",
+        "spring.datasource.username" : "root",
+        "spring.datasource.password" : "root",
         "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
         "spring.jpa.hibernate.ddl-auto" : "update"
       }'
     volumes:
-      - .m2:/root/.m2
+      - /home/m2
     stdin_open: true
     tty: true
 
