--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,14 @@
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
 	</dependencies>
+	
+	<distributionManagement>
+		<repository>
+			<id>deploymentRepo</id>
+			<name>Nexus Repository</name>
+			<url>http://192.168.33.10:8081/repository/maven-releases/</url>
+		</repository>
+	</distributionManagement>
 
 	<build>
 		<plugins>
@@ -127,13 +135,5 @@
 			</plugin>
 		</plugins>
 	</build>
-	
-	<distributionManagement>
-	  <repository>
-	     <id>deploymentRepo</id>
-	     <name>Nexus Repo TPAchat</name>
-	     <url>http://172.10.0.140:8081/repository/maven-snapshots/</url>
-	  </repository>
-	</distributionManagement>
 
 </project>
