--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,22 +11,24 @@ services:
       - $MYSQLDB_LOCAL_PORT:$MYSQLDB_DOCKER_PORT
     volumes:
       - db:/var/lib/mysql
+
   app:
     depends_on:
       - mysqldb
-    image: tpachatproject:latest
-    container_name: springboot-app
+    build:
+      context: "./"
+      dockerfile: "Dockerfile"
     restart: on-failure
-    env_file: ./.env
     ports:
-      - $SPRING_LOCAL_PORT:$SPRING_DOCKER_PORT
+      - 8089:8089
     environment:
       SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:mysql://mysqldb:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE?useSSL=false",
-        "spring.datasource.username" : "$MYSQLDB_USER",
-        "spring.datasource.password" : "$MYSQLDB_ROOT_PASSWORD",
+        "spring.datasource.url"  : "jdbc:mysql://mysqldb:3306/tpachato?useSSL=false",
+        "spring.datasource.username" : "root",
+        "spring.datasource.password" : "root",
         "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
-        "spring.jpa.hibernate.ddl-auto" : "update" }'
+        "spring.jpa.hibernate.ddl-auto" : "update"
+      }'
     volumes:
       - .m2:/root/.m2
     stdin_open: true
