--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
     restart: on-failure
     ports:
       - 8089:8089
+    image: elyeszarrad/tpachat
     environment:
       SPRING_APPLICATION_JSON: '{
         "spring.datasource.url"  : "jdbc:mysql://mysqldb:3306/tpachato?useSSL=false",
