--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,7 @@ services:
   app:
     depends_on:
       - mysqldb
-    build:
-      context: "./"
-      dockerfile: "Dockerfile"
+    build: .
     restart: on-failure
     ports:
       - 8089:8089
