--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,34 @@
-version: "3.3"
+version: "3"
 
 services:
   mysqldb:
-    container_name: mysqldb
     image: mysql:5.7
     restart: unless-stopped
+    env_file: ./.env
     environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=tpachato
+      - MYSQL_DATABASE=$MYSQLDB_DATABASE
     ports:
-      - 3306:3306
+      - $MYSQLDB_LOCAL_PORT:$MYSQLDB_DOCKER_PORT
     volumes:
-      - /home/mysql/data
+      - db:/var/lib/mysql
   app:
     depends_on:
       - mysqldb
-    build: .
+    image: tpachatproject:latest
+    container_name: springboot-app
     restart: on-failure
+    env_file: ./.env
     ports:
-      - 8089:8089
-    image: elyeszarrad/tpachat
+      - $SPRING_LOCAL_PORT:$SPRING_DOCKER_PORT
     environment:
       SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:mysql://mysqldb:3306/tpachato?useSSL=false",
-        "spring.datasource.username" : "root",
-        "spring.datasource.password" : "root",
+        "spring.datasource.url"  : "jdbc:mysql://mysqldb:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE?useSSL=false",
+        "spring.datasource.username" : "$MYSQLDB_USER",
+        "spring.datasource.password" : "$MYSQLDB_ROOT_PASSWORD",
         "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
-        "spring.jpa.hibernate.ddl-auto" : "update"
-      }'
+        "spring.jpa.hibernate.ddl-auto" : "update" }'
     volumes:
-      - /home/m2
+      - .m2:/root/.m2
     stdin_open: true
     tty: true
 
