--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,12 @@ services:
       - .m2:/root/.m2
     stdin_open: true
     tty: true
-
+  projetdevopsfrontend:
+    depends_on:
+      - projetdevopsbackend
+    container_name: projetdevopsfrontend
+    ports:
+      - '4200:80'
+    image: goro1809/projetdevopsfrontend 
 volumes:
   db:
